# qa_service

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
ai_development/: ai_development.py
ai_development/embedding_manager/: embedding_manager.py
ai_development/resources/html/: index.html
docker/python/: Dockerfile  requirements.txt
imports/: Berlin.txt  Berlin.xml  Dresden.txt  Dresden.xml  Wikipedia-Berlin.xml  Wikipedia-Dresden.xml  places.csv
notebooks/: Contriever.ipynb  Elterngeld.ipynb  Flan_T5.ipynb  Neustarthilfe.ipynb  Website_QA.ipynb
open_search/: docker-compose.yml
qa_service/: __init__.py  qa_service.py  service.py  wikipedia_indexer.py
qa_service/embedding_manager/: __init__.py  embedding_manager.py  manager.py  manager_contriever.py
qa_service/qa_manager/: __init__.py  manager.py  manager_openai.py
qa_service/t2t_manager/: __init__.py  manager.py  manager_openai.py
qa_service/wikipedia_processor/: __init__.py  download.py  places.py  processor.py  wikipedia_processor.py
src/qa_service/: service.py  wikipedia_indexer.py
src/qa_service/embedding_manager/: __init__.py  manager.py  manager_contriever.py
src/qa_service/qa_manager/: __init__.py  manager.py
src/qa_service/t2t_manager/: __init__.py  manager.py  manager_openai.py
src/qa_service/wikipedia_processor/: __init__.py  places.py  processor.py
tests/: __init__.py  conftest.py  test_embedding_manager.py  test_generic.py  test_t2t_manager.py
