[project]
name = "qa_service"
version = "0.0.1"
authors = [
  { name="André Pankraz", email="andre@pankraz.de" },
]
description = "A generic AI development blueprint project."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "accelerate",
  "bitsandbytes",
  "bs4",
  "fastapi",
  "mwparserfromhell",
  "openai",
  "opensearch-py",
  "pandas",
  "sentence_transformers",
  "stanza",
  "tiktoken",
  "transformers", # @git+https://github.com/huggingface/transformers.git
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "black",
  "pytest",
]

[project.urls]
"Homepage" = "https://github.com/andrePankraz/qa_service"
"Bug Tracker" = "https://github.com/andrePankraz/qa_service/issues"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -s --log-cli-level=DEBUG"
pythonpath = "src/"
testpaths = [
    "tests"
]